--- a/Yuzu.ProductMonitor/MainWindow.xaml
+++ b/Yuzu.ProductMonitor/MainWindow.xaml
@@ -1,12 +1,162 @@
-﻿<Window x:Class="Yuzu.ProductMonitor.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Yuzu.ProductMonitor"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="Yuzu.ProductMonitor.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Yuzu.ProductMonitor"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Yuzu生产监控平台"
+    Width="1200"
+    Height="750"
+    mc:Ignorable="d">
+    <WindowChrome.WindowChrome>
+        <!--  Window 边框厚度设为0，隐藏边框  -->
+        <WindowChrome GlassFrameThickness="0" />
+    </WindowChrome.WindowChrome>
     <Grid>
+        <Grid.Background>
+            <!--  背景渐变：画刷  -->
+            <!--  LinearGradientBrush：由左上角到右下角  -->
+            <LinearGradientBrush>
+                <GradientStop Offset="0" Color="#ff285173" />
+                <GradientStop Offset="0.5" Color="#ff244967" />
+                <GradientStop Offset="1" Color="#ff14273a" />
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50*" />
+            <RowDefinition Height="675*" />
+            <RowDefinition Height="25*" />
+        </Grid.RowDefinitions>
+        <!--  第一行：头部  -->
+        <!--  Border 用来做分隔线和花纹边框  -->
+        <Border
+            Grid.Row="0"
+            BorderBrush="#5518aabd"
+            BorderThickness="0,0,0,1">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="60" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <!--  第一行：第一列：Logo  -->
+                <Image
+                    Grid.Column="0"
+                    Margin="10,6"
+                    Source="/Resource/Images/Logo.png" />
+                <!--  第一行：第二列：文本  -->
+                <StackPanel Grid.Column="1" Margin="5">
+                    <TextBlock
+                        Margin="0,0,0,2"
+                        FontSize="16"
+                        FontWeight="Bold"
+                        Foreground="White"
+                        Text="Yuzu生产监控平台" />
+                    <TextBlock
+                        HorizontalAlignment="Center"
+                        FontSize="12"
+                        FontWeight="Light"
+                        Foreground="White"
+                        Text="认真上班，快乐回家！" />
+                </StackPanel>
+                <!--  第一行：第三列：最大/小化、关闭按钮和花纹  -->
+                <Grid Grid.Column="2">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition Height="15" />
+                    </Grid.RowDefinitions>
+                    <!--  第一行：第三列：第一行：按钮  -->
+                    <StackPanel
+                        Grid.Row="0"
+                        HorizontalAlignment="Right"
+                        Background="Transparent"
+                        Orientation="Horizontal"
+                        WindowChrome.IsHitTestVisibleInChrome="True">
+                        <!--  最小化  -->
+                        <Button
+                            x:Name="MinWindowBtn"
+                            Content="&#xe65a;"
+                            Style="{StaticResource OperateBtnStyle}" />
+                        <!--  最大化  -->
+                        <Button
+                            x:Name="MaxWindowBtn"
+                            Content="&#xe600;"
+                            Style="{StaticResource OperateBtnStyle}" />
+                        <!--  关闭  -->
+                        <Button
+                            x:Name="CloseWindowBtn"
+                            Background="DarkRed"
+                            Content="&#xe62a;"
+                            Style="{StaticResource OperateBtnStyle}" />
+                    </StackPanel>
+                    <!--  第一行：第三列：第二行：花纹  -->
+                    <Border
+                        Grid.Row="1"
+                        BorderBrush="#5518aabd"
+                        BorderThickness="1,1,0,0">
+                        <!--  使用 VisualBrush 画花纹  -->
+                        <Border.Background>
+                            <VisualBrush
+                                TileMode="FlipXY"
+                                Viewport="0 0 7 7"
+                                ViewportUnits="Absolute">
+                                <VisualBrush.Visual>
+                                    <Line
+                                        Stroke="#5518aabd"
+                                        StrokeThickness="1"
+                                        X1="0"
+                                        X2="10"
+                                        Y1="10"
+                                        Y2="0" />
+                                </VisualBrush.Visual>
+                            </VisualBrush>
+                        </Border.Background>
+                    </Border>
+                </Grid>
 
+            </Grid>
+        </Border>
+        <!--  第二行：内容区域：用户控件  -->
+
+        <!--  第三行：底部  -->
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+            <!--  第三行：第一列：花纹  -->
+            <Border
+                Grid.Column="0"
+                BorderBrush="#5518aabd"
+                BorderThickness="0,1,1,0">
+                <!--  使用 VisualBrush 画花纹  -->
+                <Border.Background>
+                    <VisualBrush
+                        TileMode="FlipXY"
+                        Viewport="0 0 7 7"
+                        ViewportUnits="Absolute">
+                        <VisualBrush.Visual>
+                            <Line
+                                Stroke="#5518aabd"
+                                StrokeThickness="1"
+                                X1="0"
+                                X2="10"
+                                Y1="10"
+                                Y2="0" />
+                        </VisualBrush.Visual>
+                    </VisualBrush>
+                </Border.Background>
+            </Border>
+            <!--  第三行：第二列：文本框  -->
+            <TextBlock
+                Grid.Column="1"
+                Margin="5,0,0,0"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center"
+                FontSize="12"
+                Foreground="White"
+                Text="@Yuzu, All Rights Reserved. " />
+        </Grid>
     </Grid>
 </Window>
