--- a/Yuzu.ProductMonitor/MainWindow.xaml
+++ b/Yuzu.ProductMonitor/MainWindow.xaml
@@ -118,7 +118,10 @@
             </Grid>
         </Border>
         <!--  第二行：内容区域：用户控件  -->
-
+        <!--  双向绑定：绑定用户控件  -->
+        <ContentControl Grid.Row="1" Content="{Binding MonitorUserControl}">
+            
+        </ContentControl>
         <!--  第三行：底部  -->
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
