--- a/Yuzu.ProductMonitor/UserControls/MonitorUserControl.xaml
+++ b/Yuzu.ProductMonitor/UserControls/MonitorUserControl.xaml
@@ -1,12 +1,51 @@
-﻿<UserControl x:Class="Yuzu.ProductMonitor.UserControls.MonitorUserControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Yuzu.ProductMonitor.UserControls"
-             mc:Ignorable="d" 
-             Height="675" Width="1200">
+﻿<UserControl
+    x:Class="Yuzu.ProductMonitor.UserControls.MonitorUserControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Yuzu.ProductMonitor.UserControls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Width="1200"
+    Height="675"
+    mc:Ignorable="d">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="150" />
+        </Grid.RowDefinitions>
+        <!--  第一行  -->
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <StackPanel
+                Grid.Column="0"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Orientation="Horizontal">
+                <TextBlock
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontFamily="../Resource/Fonts/#Digital Display"
+                    FontSize="30"
+                    Foreground="White"
+                    Text="{Binding Time}" />
+                <StackPanel Margin="5,0,0,0">
+                    <TextBlock
+                        FontSize="15"
+                        Foreground="White"
+                        Text="{Binding Date, UpdateSourceTrigger=PropertyChanged}" />
+                    <TextBlock
+                        HorizontalAlignment="Right"
+                        FontSize="15"
+                        Foreground="White"
+                        Text="{Binding WeekDay}" />
+                </StackPanel>
+            </StackPanel>
+        </Grid>
+        <!--  第一行：第一列  -->
+        <!--  第一行：第二列  -->
     </Grid>
 </UserControl>
