新增按钮样式资源字典

--- a/Yuzu.ProductMonitor/App.xaml
+++ b/Yuzu.ProductMonitor/App.xaml
@@ -1,12 +1,14 @@
-﻿<Application x:Class="Yuzu.ProductMonitor.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Yuzu.ProductMonitor"
-             StartupUri="MainWindow.xaml">
+﻿<Application
+    x:Class="Yuzu.ProductMonitor.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:Yuzu.ProductMonitor"
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Dictionaries/OperateBtnStyleDic.xaml"/>
+                <ResourceDictionary Source="Dictionaries/OperateBtnStyleDic.xaml" />
+                <ResourceDictionary Source="Dictionaries/BtnStyleDic.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
