--- a/Yuzu.ProductMonitor/MainWindow.xaml
+++ b/Yuzu.ProductMonitor/MainWindow.xaml
@@ -119,9 +119,7 @@
         </Border>
         <!--  第二行：内容区域：用户控件  -->
         <!--  双向绑定：绑定用户控件  -->
-        <ContentControl Grid.Row="1" Content="{Binding MonitorUserControl}">
-            
-        </ContentControl>
+        <ContentControl Grid.Row="1" Content="{Binding MonitorUserControl}" />
         <!--  第三行：底部  -->
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
