--- a/Yuzu.ProductMonitor/UserControls/MonitorUserControl.xaml
+++ b/Yuzu.ProductMonitor/UserControls/MonitorUserControl.xaml
@@ -7,6 +7,7 @@
     xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:radar="clr-namespace:Yuzu.ProductMonitor.UserControls"
+    xmlns:vm="clr-namespace:Yuzu.ProductMonitor.ViewModels"
     Width="1200"
     Height="675"
     mc:Ignorable="d">
@@ -118,6 +119,8 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <!--  引入自定义转换器  -->
+        <vm:CountToColorConverter x:Key="CountToColorConverter" />
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -584,8 +587,93 @@
                     <!--  这里使用了雷达图：定义一个用户控件  -->
                     <radar:RaderUserControl ItemSource="{Binding RaderList}" />
                 </GroupBox>
-                <!--  第二行：第三列：第三行：模块  -->
-                <GroupBox Header="人力" Style="{StaticResource groupBoxStyle}" />
+                <!--  第二行：第三列：第三行：人力模块  -->
+                <GroupBox Header="人力" Style="{StaticResource groupBoxStyle}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="2*" />
+                        </Grid.ColumnDefinitions>
+                        <StackPanel
+                            Grid.Column="0"
+                            Margin="0,20,0,0"
+                            VerticalAlignment="Center">
+                            <TextBlock
+                                HorizontalAlignment="Center"
+                                FontSize="24"
+                                Foreground="#99ffffff"
+                                Text="{Binding HumanResource.Count}" />
+                            <TextBlock
+                                Margin="0,10,0,0"
+                                HorizontalAlignment="Center"
+                                Foreground="#99ffffff"
+                                Text="{Binding HumanResource.ItemName}" />
+                        </StackPanel>
+                        <Grid Grid.Column="1">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="30" />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <TextBlock
+                                Grid.Row="0"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Center"
+                                Foreground="#18aabd"
+                                Text="缺岗统计" />
+                            <UniformGrid Grid.Row="1" Columns="1">
+                                <ItemsControl ItemsSource="{Binding StuffOutOfWorkList}">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <Grid Width="auto" Height="20">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="10" />
+                                                    <ColumnDefinition Width="50" />
+                                                    <ColumnDefinition Width="50" />
+                                                    <ColumnDefinition Width="auto" />
+                                                </Grid.ColumnDefinitions>
+                                                <!--  图示  -->
+                                                <Ellipse
+                                                    Width="5"
+                                                    Height="5"
+                                                    Margin="0,0,5,0"
+                                                    Fill="LightCoral" />
+                                                <!--  姓名  -->
+                                                <TextBlock
+                                                    Grid.Column="1"
+                                                    Margin="10,0,0,0"
+                                                    Foreground="#99ffffff"
+                                                    Text="{Binding StuffName}" />
+                                                <!--  职位  -->
+                                                <TextBlock
+                                                    Grid.Column="2"
+                                                    Margin="10,0,5,0"
+                                                    Foreground="#99ffffff"
+                                                    Text="{Binding PositionName}" />
+                                                <!--  统计图  -->
+                                                <StackPanel Grid.Column="3" Orientation="Horizontal">
+                                                    <Border
+                                                        Width="{Binding OutOfWorkCount}"
+                                                        Height="5"
+                                                        Margin="0,0,5,0"
+                                                        HorizontalAlignment="Center"
+                                                        Background="#18aabd" />
+                                                    <!--  高于30的模块标红，使用自定义的转换器  -->
+                                                    <TextBlock
+                                                        Margin="4,0,0,0"
+                                                        HorizontalAlignment="Center"
+                                                        VerticalAlignment="Center"
+                                                        FontSize="10"
+                                                        Foreground="{Binding OutOfWorkCount, Converter={StaticResource CountToColorConverter}}"
+                                                        Text="{Binding OutOfWorkCount}" />
+                                                </StackPanel>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+                            </UniformGrid>
+                        </Grid>
+                    </Grid>
+                </GroupBox>
             </UniformGrid>
         </Grid>
     </Grid>
